--- a/Navbar.html
+++ b/Navbar.html
@@ -4,7 +4,7 @@
 
     <!-- Logo -->
     <a href="index.html" class="logo">
-      <img src="images/logo.PNG" alt="Logo" class="logo-img">
+      <img src="images/logo.png" alt="Logo" class="logo-img">
       <img src="images/letraslogo.png" alt="Logo letras" class="logo-img-text">
     </a>
 
